# ufsj-wumpus

./: .debug_time  .editorconfig  .gitignore  CMakeLists.txt  Config.h  LICENSE  Makefile  README.md  build.sh
include/: Config.h  Config.h.in  agent.h  linkedlst.h  main.h  sensor.h  structs.h  vitor.h  world.h
src/: agent.c  game.c  linkedlst.c  main.c  sensor.c  util.c  vitor.c  world.c
src/includes/: agent.h  game.h  linkedlst.h  main.h  sensor.h  structs.h  util.h  world.h
